[package]
name = "esp32c3-libpower-demo"
version = "0.1.0"
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.31.5", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.41.2", default-features = false, features = ["alloc"] }
libpower = { git = "https://github.com/shishir-dey/libpower.git" }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
